# keyan-calculator

./: .cnb.yml  .gitignore  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.updater/: latest.json
docs/: auto-update.md
scripts/: publish-cnb.sh  release.sh  sync-version.mjs  update-manifest.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hasher.rs  lib.rs  scanner.rs  store.rs  types.rs
src/components/: copy-button.tsx  file-detail.tsx  folder-list.tsx  settings-bar.tsx  status-badge.tsx  status-bar.tsx
src/components/ui/: badge.tsx  button.tsx  input.tsx  progress.tsx
src/lib/: format.ts  tauri.ts  updater.ts
src/styles/: globals.css
